# RustKimushun

./: Cargo.toml  README.md  index.html
src/: components.rs  logic.rs  main.rs
src/components/: back_button.rs  button.rs  camera.rs  display.rs  home.rs  result.rs  scan.rs  shutter_button.rs  view.rs
src/js/: script.js
src/logic/: decode.rs  encode.js  ocr.js  reconstruction.rs  to_code.rs
