[package]
name = "rust_kimushun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2"
log = "0.4.6"
wasm-logger = "0.2.0"
image = "0.24.5"
leptess = "0.14.0"
maplit = "1.0.2"
leptonica-sys = "0.4.4"
